--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,12 @@ body {
   margin: 0;
   padding: 0;
 }
-
+.main {
+  font-size: 24px;
+  margin-top: 50px;
+  /* margin-left: 100px; */
+  text-align: center;
+}
 header {
   background-color: #333;
   color: #fff;
