--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,35 @@ nav ul li a {
 main {
   padding: 20px;
 }
-
+h2 {
+  margin-top: 70px;
+  margin-left: -10px;
+  margin-bottom: -20px;
+  text-align: center;
+  color: #333;
+}
+h3 {
+  margin-top: 70px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #333;
+}
+.btn {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  text-decoration: none;
+  margin: 10px;
+}
+input {
+  width: 300px;
+  height: 30px;
+  margin: 10px;
+}
+#landing {
+  margin-top: 80px;
+  font-size: 18px;
+}
 footer {
   background-color: #333;
   color: #fff;
